--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-http-context": "^2.0.0",
     "express-session": "^1.17.3",
+    "firebase": "^11.6.0",
     "helmet": "^8.1.0",
     "mongoose": "^8.0.4",
     "morgan": "^1.10.0",
