--- a/package.json
+++ b/package.json
@@ -21,16 +21,19 @@
   "private": true,
   "dependencies": {
     "@lnu/json-js-cycle": "^2.0.5",
+    "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-http-context": "^2.0.0",
     "express-session": "^1.17.3",
     "firebase": "^11.6.0",
+    "firebase-admin": "^13.2.0",
     "helmet": "^8.1.0",
     "mongoose": "^8.0.4",
     "morgan": "^1.10.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "@lnu/eslint-config": "^1.1.10",
