--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ test:
 
 build:
   stage: build
-  image: node:20.6
+  image: node:latest
   script:
     - npm install
     - docker build -t $CI_REGISTRY_IMAGE:latest .
