--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,4 +20,4 @@ build:
     - /kaniko/executor
       --context "${CI_PROJECT_DIR}"  
       --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}/memora:${CI_COMMIT_TAG:-latest}"            
+      --destination "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG:-latest}"            
