--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
   - test
   - build
+  - deploy
 
 test:
   stage: test
@@ -20,4 +21,15 @@ build:
     - /kaniko/executor
       --context "${CI_PROJECT_DIR}"  
       --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG:-latest}"            
+      --destination "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG:-latest}"      
+
+trigger_deploy:
+  stage: deploy
+  trigger:
+    project: 1dv613/student/tg222hh/memora/docker-compose-config
+    branch: main
+  only:
+    - main
+  needs:
+    - build
+      
