--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,14 +14,16 @@ test:
 
 build:
   stage: build
+  needs:
+    - test
   image:
     name: gcr.io/kaniko-project/executor:v1.9.0-debug
     entrypoint: [""]
-  script:  # See https://docs.gitlab.com/ee/ci/docker/using_kaniko.html
+  script: # See https://docs.gitlab.com/ee/ci/docker/using_kaniko.html
     - /kaniko/executor
-      --context "${CI_PROJECT_DIR}"  
+      --context "${CI_PROJECT_DIR}"
       --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG:-latest}"      
+      --destination "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG:-latest}"
 
 trigger_deploy:
   stage: deploy
@@ -30,6 +32,6 @@ trigger_deploy:
     branch: main
   only:
     - main
+    - pipelineRefactoring
   needs:
     - build
-      
