--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,11 +20,14 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20.6"
-          cache: "npm"
+          node-version: '20.6'
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm install
+
+      - name: Run linter
+        run: npm run lint
 
       - name: Run tests
         run: |
